added max height to landscape view

--- a/style.scss
+++ b/style.scss
@@ -75,6 +75,7 @@ html, body {
             border-radius: 15px;
             min-width: 710px;
             min-height: 260px;
+            max-height: 500px;
     
             #photo {
                 grid-row: 1;
