--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ html, body {
     border-radius: 15px;
     min-width: 710px;
     min-height: 260px;
+    max-height: 500px;
   }
   body #card #photo {
     grid-row: 1;
