--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html, body {
   font-size: 13px;
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 @media (min-width: 720px) {
@@ -32,8 +33,8 @@ html, body {
     grid-template-columns: 38.9% 1fr;
     background-color: white;
     border-radius: 15px;
-    min-width: 710px;
-    min-height: 260px;
+    min-width: 730px;
+    min-height: 280px;
     max-height: 500px;
   }
   body #card #photo {
@@ -211,6 +212,8 @@ html, body {
     display: grid;
     grid-template-rows: 11.05% 76.8% 1fr;
     grid-template-columns: 6.1% 1fr 6.1%;
+    justify-items: center;
+    align-items: center;
     background-color: #ecf2f8;
   }
   body #mobile-flag {
@@ -227,10 +230,11 @@ html, body {
     grid-template-rows: 39% 44%;
     grid-template-columns: 1fr;
     border-radius: 15px 15px 15px 15px;
+    height: 100%;
     min-width: 330px;
+    max-width: 400px;
     min-height: 500px;
-    /*            min-width: 710px;
-                min-height: 260px;  DONT FORGET TO ADJUST THESE VALUES!*/
+    max-height: 700px;
   }
   body #card #photo {
     display: none;
@@ -284,17 +288,12 @@ html, body {
     display: flex;
     flex-direction: column;
     height: 14.7%;
-    /*                flex-direction: row;  */
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: 6.1% 1fr 6.1%;
   }
   body #card #footer #mobile-profile-content {
     grid-row: 1;
     grid-column: 2;
     display: flex;
     height: 54%;
-    grid-template-rows: 1fr;
-    grid-template-columns: 15.1% 1fr 13.2%;
     background-color: white;
     align-items: center;
     padding-top: 4.5%;
